--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,6 +1,10 @@
 name: Code Formatting
 
-on:
+on:  
+  push:
+    branches:
+      - main
+      - develop
   pull_request:
     branches:
       - main
