--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,13 @@ dependencies = [
     "numpy",
     "PyYAML",
     "tqdm",
+    "streamlit",
+    "mediapipe",
+    "watchdog",
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "pytest-cov", "black", "flake8", "isort", "mediapipe"]
+dev = ["pytest", "pytest-cov", "black", "flake8", "isort"]
 
 [tool.setuptools]
 packages = ["drowsiness_detection"]
