Add new dependencies for Streamlit, Mediapipe, Watchdog, and Ipykernel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "numpy",
     "PyYAML",
     "tqdm",
+    "streamlit",
+    "mediapipe",
+    "watchdog",
+    "ipykernel>=6.29.5",
 ]
 
 [project.optional-dependencies]
